Added method: send Recommentation List to Api